welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: illegal start of statement
  else if ((hour < 7) && talking) {
  ^